V1.1.3 Friday, January 19 2013
 Changes
 +Fixed persistent history so it is persistent if checked.
 +Changed all single lists to double.
 +Cleaned up prefs subsystem code in add_section.
 
V1.1.2 Thursday, January 18 2013 
 Changes
 +Added tooltips for Primary,copy, and syncronize options.
 +Fixed lockup bug recently introduced.
 +Fixed status icon showing up with -n in appindicator.
 +Changed Paste All to Copy All to clip.
 
V1.1.1 Wednesday, January 16 2013 
 Changes
 +Added Paste All on history item right-click.
 +Added Edit on history item right-click.
 +Fix Bug 3417225,Alt+c clear invoked when Ctrl+Alt+c is hotkey.
 +Fix Bug 2687052(re-introduced in rc7) that auto-deselects text in apps like LyX and DevHelp. SVN319 
 +Added tooltip for Action/Command column headers.
 +Fixed svnversion.sh so it shows correct svn revision
 +Added automatic paste via xdotool.
 +Added multiple items per line on preferences subsytem.
  
V1.1.0 Wednesday, January 16 2013 
 Changes
 ***This is a major release.***
 +Added patch 3389976 - history menu crash, utf-8
 +Added UTF-8 checks on incomming text streams.
 +Changed history entries to structures (and history file format) to support
  upcoming features.
 +Added persistent history list and corresponding hot key.
 +Added right-click either history list with a Move To or cancel.
 +Added Save As for the history file - writes a text file out.
 +Major rewrite of cliboard handling. It is now very simple and eliminates a 
  lot of CPU overhead.
 +Fixed bug 3560995, mouse button events causing false searches.
 +Added appindicator so it appears in unity.
 +Completely re-wrote prefs sybsystem, so prefs are easier to add.
 +Fixed wide dialog, and quit instant activation.
 +Added current entry on to preference.
 +Added locking for clipboard updates.
 +Fixed lost clip entries when selecting existing history clip entries.
  
V1.0.2rc6 Wednesday, January 9 2013 
 Changes
 +Applied glib patch from bug 3518845