@@ -21,6 +21,8 @@
 #include "preferences.h"
 G_BEGIN_DECLS
 
+extern GMutex *hist_lock;
+
 #define ACTIONS_TAB    2
 #define POPUP_DELAY    100
 #define CHECK_INTERVAL 500
